# wordle_lu_qinyang

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hw7.py  pyproject.toml  pyproject.toml.save
docs/: Makefile  conf.py  example.ipynb  make.bat
src/docs/source/: conf.py  index.rst
src/wordle_ql2581/: __init__.py  main.py
tests/: test_wordle_ql2581.py
