[tool.poetry]
name = "wordle_ql2581"
version = "0.1.0"
description = "A short description"
authors = ["Qinyang Lu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.5.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
